--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "2.3.0",
     "reactstrap": "5.0.0",
     "redux": "^4.0.5",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0",
     "typeface-lobster": "^0.0.72",
     "typeface-open-sans": "^0.0.75"
   },
